2011-11-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm: Store current
	text encoding in list of drawing ops.

2011-11-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h src/axis.c (parse_range, parse_named_range)
	src/axis.c (save_writeback_all_axes check_axis_reversed)
	src/fit.c src/plot2d.c src/plot3d.c src/stats.c src/unset.c:
	Replace axis-related macros with equivalent subroutines.

2011-11-14  Ethan A Merritt  <merritt@u.washington.edu>

	* config/Makefile.am.in demo/Makefile.am.in m4/Makefile.am.in
	tutorial/Makefile.am.in term/Makefile.am.in:

	Make sure that the generated files Makefile.am and gnuplot-tikz.help
	do not end up non-writable by the owner, which caused build cleanup
	problems while packaging.  Bug #3419881

2011-11-14  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/plot2d.c (store2d_point): Fix for 4-column mode of
	BOXPLOT style which did not handle log scale correctly.

2011-11-14  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.h src/win/wgraph.c src/win/winmain.c
	src/win/wtext.c: Localisation support for menu and help files.
	Files are loaded according to current language settings from
	files named "wgnuplot-LL.mnu" and "wgnuplot-LL.chm", where LL is
	the abbreviation of the current language. Fall back to
	"wgnuplot.mnu" and "wgnuplot.chm" if localised files don't exist.
	Defaults may be overwritten by new entries "MenuFile" and
	"HelpFile" in wgnuplot.ini.
	Choose appropriate default fonts in Japanese environments.

	src/show.c (show_version) src/win/winmain.h: List correct names
	of menu and help files on Windows.

	src/win.trm (WIN_set_color): Immediately translate palette color
	values to RGB instead of passing them on. This makes it possible
	to use more than one palettes in multiplots and in different
	graph windows. Test e.g. with pm3dcolors.dem

	* src/win/wgraph.c src/win/wresourc.h src/win/wgnuplib.h: Add a